[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=1]
[ext_resource path="res://assets/background/lobby_bg.png" type="Texture" id=2]
[ext_resource path="res://menu/lobby/ui/ui.gd" type="Script" id=3]
[ext_resource path="res://assets/user_interface/icons/back.png" type="Texture" id=4]
[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fps_ping_displayer/fps_ping_displayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/user_interface/fonts/montserrat_eb_28.tres" type="DynamicFont" id=7]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bg" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/bg"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/bg"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Control" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_right = 600.0
margin_bottom = 1024.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 600.0
margin_bottom = 128.0

[node name="back" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="MarginContainer3" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 468.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer3"]
margin_left = 115.0
margin_top = 44.0
margin_right = 220.0
margin_bottom = 84.0
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 5 )
text = "Lobby"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 472.0
margin_right = 600.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 132.0
margin_right = 600.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 60 )

[node name="match" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_right = 298.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
disabled = true
text = "Match"

[node name="players" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Players"

[node name="match_tab" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
visible = false
margin_top = 196.0
margin_right = 600.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="player_tab" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 196.0
margin_right = 600.0
margin_bottom = 1020.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/player_tab"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 1024.0
margin_right = 600.0
margin_bottom = 1024.0

[node name="play" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer"]
visible = false
margin_left = 100.0
margin_top = -63.0
margin_right = 500.0
margin_bottom = 62.0
rect_min_size = Vector2( 400, 125 )
custom_fonts/font = ExtResource( 7 )
text = "Play"

[node name="ready" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer"]
visible = false
margin_left = 100.0
margin_top = -63.0
margin_right = 500.0
margin_bottom = 62.0
rect_min_size = Vector2( 400, 125 )
custom_fonts/font = ExtResource( 7 )
text = "Ready"

[node name="fps_ping_displayer" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
margin_top = 974.0
margin_right = 160.0
margin_bottom = 1024.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 2

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/match" to="." method="_on_match_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/players" to="." method="_on_players_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/ready" to="." method="_on_ready_pressed"]
